# routes/routes.js
@@ -5,6 +5,7 @@ const fishRoutes = require("./fish");
 const typeRoutes = require("./type");
 const postRoutes = require("./post");
 const voucherRoutes = require("./voucher");
+const orderRoutes = require("./order");
 
 const router = express.Router();
 
@@ -14,5 +15,6 @@ router.use("/fish", fishRoutes);
 router.use("/post", postRoutes);
 router.use("/type", typeRoutes);
 router.use("/voucher", voucherRoutes);
+router.use("/order", orderRoutes);
 
 module.exports = router;
